# Mastering-Qt-5

Chapter_02/: CMakeLists.txt
Chapter_03/: CMakeLists.txt
Chapter_03/gallery-core/: CMakeLists.txt
Chapter_04/: CMakeLists.txt
Chapter_04/gallery-core/: CMakeLists.txt
Chapter_04/gallery-desktop/: CMakeLists.txt
